<resources>
    <string name="app_name">intentPassing</string>
    <string name="fname1">First Name</string>
    <string name="fname2">Enter First Name</string>
    <string name="lname1">Last Name</string>
    <string name="lname2">Enter Last Name</string>
    <string name="uname1">Username</string>
    <string name="uname2">Enter Username</string>
    <string name="pass1">Password</string>
    <string name="pass2">Enter Password</string>
    <string name="display">Display</string>
    <string name="submitt">Submitt</string>
    <string name="reset">Reset</string>
</resources>
